force-app/main/default/objects/Quote_Coverage_Link__c/Quote_Coverage_Link__c.object-meta.xml
<CustomObject>
    <label>Quote Coverage Link</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote Coverage Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Coverage Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>