force-app/main/default/objects/Quote_Coverage_Link__c/fields/Acceptance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acceptance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>