force-app/main/default/objects/Quote_Coverage_Link__c/fields/Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Aggregate__c</fullName>
    <inlineHelpText>Our attachment point aka Total Underlying Limits.</inlineHelpText>
    <label>Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>