force-app/main/default/objects/Quote_Coverage_Link__c/fields/Any_One_Building_or_Structure__c.field-meta.xml
<CustomField>
    <fullName>Any_One_Building_or_Structure__c</fullName>
    <label>Any One Building or Structure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>