force-app/main/default/objects/Quote_Coverage_Link__c/fields/Attachment_Point1__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Point1__c</fullName>
    <label>Attachment Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>