force-app/main/default/objects/Quote_Coverage_Link__c/fields/Attachment_Point__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Point__c</fullName>
    <description>Used for Scale</description>
    <label>Excess D&amp;O Attachment Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>