force-app/main/default/objects/Quote_Coverage_Link__c/fields/Bodily_Injury_By_Accident_each_accident__c.field-meta.xml
<CustomField>
    <fullName>Bodily_Injury_By_Accident_each_accident__c</fullName>
    <label>Bodily Injury By Accident (each accident</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>