force-app/main/default/objects/Quote_Coverage_Link__c/fields/Bodily_Injury_By_Disease_policy_limit__c.field-meta.xml
<CustomField>
    <fullName>Bodily_Injury_By_Disease_policy_limit__c</fullName>
    <label>Bodily Injury By Disease (policy limit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>