force-app/main/default/objects/Quote_Coverage_Link__c/fields/Bond_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bond_Amount__c</fullName>
    <label>Bond Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>