force-app/main/default/objects/Quote_Coverage_Link__c/fields/Business_Interruption_allow_text__c.field-meta.xml
<CustomField>
    <fullName>Business_Interruption_allow_text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter Monetary Value, ALS, or RCV</inlineHelpText>
    <label>Business Interruption</label>
    <length>50</length>
    <type>Text</type>
</CustomField>