force-app/main/default/objects/Quote_Coverage_Link__c/fields/Business_Personal_Property__c.field-meta.xml
<CustomField>
    <fullName>Business_Personal_Property__c</fullName>
    <label>Business Personal Property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>