force-app/main/default/objects/Quote_Coverage_Link__c/fields/Cannabis_Inventory_Finished_Stock__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Inventory_Finished_Stock__c</fullName>
    <label>Cannabis Inventory / Finished Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>