force-app/main/default/objects/Quote_Coverage_Link__c/fields/Cannabis_Machinery_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Cannabis_Machinery_Equipment__c</fullName>
    <label>Cannabis Machinery / Equipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>