force-app/main/default/objects/Quote_Coverage_Link__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Primary carrier&apos;s name.</inlineHelpText>
    <label>Primary Carrier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>