force-app/main/default/objects/Quote_Coverage_Link__c/fields/Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Class_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>U.W. understanding of operations</inlineHelpText>
    <label>Class Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>