force-app/main/default/objects/Quote_Coverage_Link__c/fields/Co_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Co_Insurance__c</fullName>
    <label>Co-Insurance (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>