force-app/main/default/objects/Quote_Coverage_Link__c/fields/Combined__c.field-meta.xml
<CustomField>
    <fullName>Combined__c</fullName>
    <label>Combined ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>