force-app/main/default/objects/Quote_Coverage_Link__c/fields/Combined_Single_Limit__c.field-meta.xml
<CustomField>
    <fullName>Combined_Single_Limit__c</fullName>
    <label>Combined Single Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>