force-app/main/default/objects/Quote_Coverage_Link__c/fields/Commercial_Package__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Package__c</fullName>
    <label>Commercial Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>