force-app/main/default/objects/Quote_Coverage_Link__c/fields/Contingent_Liability__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Liability__c</fullName>
    <description>Used in Occupational Accident field set</description>
    <label>Contingent Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>