force-app/main/default/objects/Quote_Coverage_Link__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <label>Crop</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>