force-app/main/default/objects/Quote_Coverage_Link__c/fields/Damage_To_Premises_Rented__c.field-meta.xml
<CustomField>
    <fullName>Damage_To_Premises_Rented__c</fullName>
    <label>Damage To Premises Rented</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>