force-app/main/default/objects/Quote_Coverage_Link__c/fields/Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Endorsement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endorsement</label>
    <referenceTo>Endorsement__c</referenceTo>
    <relationshipLabel>Quote Coverage Links</relationshipLabel>
    <relationshipName>Quote_Coverage_Links</relationshipName>
    <type>Lookup</type>
</CustomField>