force-app/main/default/objects/Quote_Coverage_Link__c/fields/Endorsement_Policy__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Policy__c</fullName>
    <formula>IF(((TEXT(Endorsement__r.Category__c) == &apos;Decrease Limits&apos; || TEXT(Endorsement__r.Category__c) == &apos;Increase Limits&apos;) &amp;&amp; TEXT(Endorsement__r.Stage__c) == &apos;Bind Order Sent&apos;), Endorsement__r.Policy__c ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endorsement Policy</label>
    <type>Text</type>
</CustomField>