force-app/main/default/objects/Quote_Coverage_Link__c/fields/Equipment_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Breakdown__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Breakdown</label>
    <length>50</length>
    <type>Text</type>
</CustomField>