force-app/main/default/objects/Quote_Coverage_Link__c/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>