force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_EPL_Attachment_Point__c.field-meta.xml
<CustomField>
    <fullName>Excess_EPL_Attachment_Point__c</fullName>
    <description>For Scale</description>
    <label>Excess EPL Attachment Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>