force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_EPL_First_Excess_Premium__c.field-meta.xml
<CustomField>
    <fullName>Excess_EPL_First_Excess_Premium__c</fullName>
    <label>Excess EPL First Excess Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>