force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_EPL_First_Excess_Scale__c.field-meta.xml
<CustomField>
    <fullName>Excess_EPL_First_Excess_Scale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Excess EPL First Excess Carrier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>