force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_EPL_Occurrence_field__c.field-meta.xml
<CustomField>
    <fullName>Excess_EPL_Occurrence_field__c</fullName>
    <description>Excess EPL Occurrence field.</description>
    <label>Excess EPL Occurrence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>