force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_EPL_Primary_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Excess_EPL_Primary_Carrier_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Excess EPL Primary Carrier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>