force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_FID_Attachment_Point__c.field-meta.xml
<CustomField>
    <fullName>Excess_FID_Attachment_Point__c</fullName>
    <label>Excess FID Attachment Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>