force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_FID_Excess_First_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Excess_FID_Excess_First_Carrier_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Excess FID Excess First Carrier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>