force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_FID_First_Excess_Premium_Scale__c.field-meta.xml
<CustomField>
    <fullName>Excess_FID_First_Excess_Premium_Scale__c</fullName>
    <label>Excess FID First Excess Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>