force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_FID_Primary_Limit__c.field-meta.xml
<CustomField>
    <fullName>Excess_FID_Primary_Limit__c</fullName>
    <label>Excess FID Primary Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>