force-app/main/default/objects/Quote_Coverage_Link__c/fields/Excess_FID_Primary_Premium__c.field-meta.xml
<CustomField>
    <fullName>Excess_FID_Primary_Premium__c</fullName>
    <label>Excess FID Primary Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>