force-app/main/default/objects/Quote_Coverage_Link__c/fields/Existing_Buildings_or_Structures__c.field-meta.xml
<CustomField>
    <fullName>Existing_Buildings_or_Structures__c</fullName>
    <label>Existing Buildings or Structures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>