force-app/main/default/objects/Quote_Coverage_Link__c/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <inlineHelpText>Amount used to rate the policy</inlineHelpText>
    <label>Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>