force-app/main/default/objects/Quote_Coverage_Link__c/fields/First_Excess_Carrier_Name1__c.field-meta.xml
<CustomField>
    <fullName>First_Excess_Carrier_Name1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Excess Carrier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>