force-app/main/default/objects/Quote_Coverage_Link__c/fields/First_Excess_Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Excess_Carrier_Name__c</fullName>
    <description>For Scale Excess</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Excess D&amp;O First Excess Carrier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>