force-app/main/default/objects/Quote_Coverage_Link__c/fields/First_Excess_Limit1__c.field-meta.xml
<CustomField>
    <fullName>First_Excess_Limit1__c</fullName>
    <label>First Excess Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>