force-app/main/default/objects/Quote_Coverage_Link__c/fields/First_Excess_Premium__c.field-meta.xml
<CustomField>
    <fullName>First_Excess_Premium__c</fullName>
    <description>For Scale Excess</description>
    <label>Excess D&amp;O First Excess Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>