force-app/main/default/objects/Quote_Coverage_Link__c/fields/FMP_EPL_Retention__c.field-meta.xml
<CustomField>
    <fullName>FMP_EPL_Retention__c</fullName>
    <label>FMP EPL Retention</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>