force-app/main/default/objects/Quote_Coverage_Link__c/fields/FMP_FID_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>FMP_FID_Occurrence__c</fullName>
    <label>FMP FID Occurrence</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>