force-app/main/default/objects/Quote_Coverage_Link__c/fields/Lloyd_s_Risk_Code__c.field-meta.xml
<CustomField>
    <fullName>Lloyd_s_Risk_Code__c</fullName>
    <formula>IF(
Name = &quot;Directors &amp; Officers&quot;, &quot;D2&quot;,
IF(
Name = &quot;Excess D&amp;O&quot;, &quot;D2&quot;,
IF(
Name = &quot;D&amp;O&quot;, &quot;D2&quot;,
IF(
Name = &quot;FMP M&amp;PL&quot;, &quot;D4&quot;,
IF(
Name = &quot;Excess EPL&quot;, &quot;D6&quot;,
IF(
Name = &quot;EPL&quot;, &quot;D6&quot;,
IF(
Name = &quot;FMP EPL&quot;, &quot;D6&quot;,
IF(
Name = &quot;Employment Practices Liability Insurance&quot;, &quot;D6&quot;,
IF(
Name = &quot;Excess FID&quot;, &quot;D2&quot;,
IF(
Name = &quot;FID&quot;, &quot;D2&quot;,
IF(
Name = &quot;Fiduciary Liability&quot;,&quot;D2&quot;,
IF (
Name = &quot;Key Man&quot;, &quot;50% PN / 50% KG&quot;, 
IF (
Name = &quot;FMP FID&quot;, &quot;D2&quot;,&quot;&quot;
)))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lloyd&apos;s Risk Code</label>
    <type>Text</type>
</CustomField>