force-app/main/default/objects/Quote_Coverage_Link__c/fields/Lloyd_s_Section_Number__c.field-meta.xml
<CustomField>
    <fullName>Lloyd_s_Section_Number__c</fullName>
    <formula>IF(
 Name = &quot;Directors &amp; Officers&quot;, &quot;Section A&quot;,
IF(
 Name = &quot;D&amp;O&quot;, &quot;Section A&quot;,
IF(
 Name = &quot;Excess D&amp;O&quot;, &quot;Section A&quot;,
IF(
 Name = &quot;FMP M&amp;PL&quot;, &quot;Section A&quot;,
IF(
 Name = &quot;Excess EPL&quot;, &quot;Section B&quot;,
IF(
 Name = &quot;EPL&quot;, &quot;Section B&quot;,
IF(
 Name = &quot;FMP EPL&quot;, &quot;Section B&quot;,
IF(
 Name = &quot;Excess FID&quot;, &quot;Section C&quot;,
IF(
 Name = &quot;FID&quot;, &quot;Section C&quot;,
IF(
 Name = &quot;FMP FID&quot;, &quot;Section C&quot;,
IF(
Name = &quot;Fiduciary Liability&quot;, &quot;Section C&quot;,
IF(
Name = &quot;Employment Practices Liability Insurance&quot;, &quot;Section B&quot;, 
IF(
Name = &quot;Excess Employment Practices Liability Insurance&quot;, &quot;Section B&quot;,
&quot;&quot;)))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lloyd&apos;s Section Number</label>
    <type>Text</type>
</CustomField>