force-app/main/default/objects/Quote_Coverage_Link__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Quote Coverage Links</relationshipLabel>
    <relationshipName>Quote_Coverage_Links</relationshipName>
    <type>Lookup</type>
</CustomField>