force-app/main/default/objects/Quote_Coverage_Link__c/fields/Management_Liability_Package__c.field-meta.xml
<CustomField>
    <fullName>Management_Liability_Package__c</fullName>
    <label>Management Liability Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>