force-app/main/default/objects/Quote_Coverage_Link__c/fields/Max_value_any_one_item__c.field-meta.xml
<CustomField>
    <fullName>Max_value_any_one_item__c</fullName>
    <label>Max value (any one item)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>