force-app/main/default/objects/Quote_Coverage_Link__c/fields/Medical__c.field-meta.xml
<CustomField>
    <fullName>Medical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical</label>
    <type>Checkbox</type>
</CustomField>