force-app/main/default/objects/Quote_Coverage_Link__c/fields/Medical_emergency__c.field-meta.xml
<CustomField>
    <fullName>Medical_emergency__c</fullName>
    <label>Medical emergency, travel and rescue exp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>