force-app/main/default/objects/Quote_Coverage_Link__c/fields/Medical_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Medical_Expenses__c</fullName>
    <label>Medical Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>