force-app/main/default/objects/Quote_Coverage_Link__c/fields/Occurence__c.field-meta.xml
<CustomField>
    <fullName>Occurence__c</fullName>
    <inlineHelpText>Our limit aka Aggregate Limit.</inlineHelpText>
    <label>Occurrence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>