force-app/main/default/objects/Quote_Coverage_Link__c/fields/Occurence_Limit__c.field-meta.xml
<CustomField>
    <fullName>Occurence_Limit__c</fullName>
    <label>Occurence Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>