force-app/main/default/objects/Quote_Coverage_Link__c/fields/Occurrence_D_O__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_D_O__c</fullName>
    <description>Excess D&amp;O Occurrence field</description>
    <label>Excess D&amp;O Occurrence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>