force-app/main/default/objects/Quote_Coverage_Link__c/fields/Occurrence_Primary__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Primary__c</fullName>
    <label>Occurrence (Primary)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>