force-app/main/default/objects/Quote_Coverage_Link__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Coverage Links</relationshipLabel>
    <relationshipName>Quote_Coverage_Links</relationshipName>
    <type>Lookup</type>
</CustomField>