force-app/main/default/objects/Quote_Coverage_Link__c/fields/Out_of_Pocket_Max__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Pocket_Max__c</fullName>
    <label>Out of Pocket Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>