force-app/main/default/objects/Quote_Coverage_Link__c/fields/Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Per_Hour__c</fullName>
    <label>Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>