force-app/main/default/objects/Quote_Coverage_Link__c/fields/Percent_of_Salary__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Salary__c</fullName>
    <label>Percent of Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>