force-app/main/default/objects/Quote_Coverage_Link__c/fields/Personal_Advertising__c.field-meta.xml
<CustomField>
    <fullName>Personal_Advertising__c</fullName>
    <label>Personal &amp; Advertising</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>