force-app/main/default/objects/Quote_Coverage_Link__c/fields/Personal_Property__c.field-meta.xml
<CustomField>
    <fullName>Personal_Property__c</fullName>
    <label>Personal Property</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>