force-app/main/default/objects/Quote_Coverage_Link__c/fields/Physical_Damage_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Physical_Damage_Coverage__c</fullName>
    <description>removing to make a new currency field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physical Damage Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>