force-app/main/default/objects/Quote_Coverage_Link__c/fields/Physical_Damage_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Physical_Damage_Deductible__c</fullName>
    <label>Collision Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>