force-app/main/default/objects/Quote_Coverage_Link__c/fields/Physical_Damage_new__c.field-meta.xml
<CustomField>
    <fullName>Physical_Damage_new__c</fullName>
    <label>Physical Damage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>