force-app/main/default/objects/Quote_Coverage_Link__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>